--- a/themes/lux-stream.css
+++ b/themes/lux-stream.css
@@ -17,7 +17,7 @@
   border-style: solid;
   border-image: linear-gradient(to bottom, #6b8e23 60%, transparent 100%) 1;
   margin: 15px 15px 0 15px;
-  padding: 30px;
+  padding: 15px 15px 0 15px;
   text-align: justify;
   font-size: 15px;
   line-height: 1.6;
